--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@tanstack/angular-query-experimental": "^5.64.1",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "front-matter": "^4.0.2",
