--- a/analog-query/tsconfig.json
+++ b/analog-query/tsconfig.json
@@ -15,6 +15,7 @@
     }
   ],
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "target": "es2020",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
