--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/angular-query-experimental": "^5.64.1",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
+    "drizzle-orm": "^0.38.4",
     "front-matter": "^4.0.2",
     "isomorphic-fetch": "^3.0.0",
     "marked": "^5.0.2",
@@ -27,9 +28,9 @@
     "marked-highlight": "^2.0.1",
     "marked-mangle": "^1.1.7",
     "mermaid": "^10.2.4",
+    "postgres": "^3.4.5",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
-    "superjson": "^2.2.1",
     "tslib": "^2.4.0",
     "zod": "^3.21.4",
     "zone.js": "~0.15.0"
@@ -46,6 +47,7 @@
     "@nx/vite": "^20.0.0",
     "@nx/workspace": "20.3.2",
     "autoprefixer": "^10.4.0",
+    "drizzle-kit": "^0.30.2",
     "jsdom": "^22.1.0",
     "nx": "20.3.2",
     "postcss": "^8.4.5",
